jupyterhub/overlays/prod/jupyterhub-route.enc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
    name: jupyterhub
spec:
    host: jupyterhub.datahub.redhat.com
    port:
        targetPort: 8080-tcp
    tls:
        certificate: ENC[AES256_GCM,data:IwXs4z1TRLwUm00U7liqDr0zwobCox2dRY42E2pzhSt7ZGrZ2tvbmt2u+duvbpH0lt4PnEvvMOJYsqdbzyzi9q6a7qLlwV+w/XW16L3lZuiDPBIBY8rJvLm68cCJjHrOE2nRpsqEnpnzZYBZTYwfl30o+xPYGaGIhMywuZiLdGew6Ns12sYXXHM3ockB8CES3KlvncRr4mA19NLZXyTufb+5m0P18XS47oTMG2IU0732f51tAiJm+YgsWWhtV+lSRg8DuRqW0tc4CpbMGQofKoTIhY1XvAbgUazO9olFoRm5sk50hDh0ctlZg7LY12SElDL9uMRe2cGES4zIdPbAdPF4nKVo1pwVFNUvHFSN7G8TE5oA6VAO6FACqBikDSfSbzk6OTwfNAvFN85Z3PvVeia/NT2HXtLbujBTnG0ZZpn+QuSWElr9vCSSAOlY2bhglf/GKauiEce [...]
        insecureEdgeTerminationPolicy: ENC[AES256_GCM,data:7ddJjyRqZhY=,iv:dxH5G/GqbFVN1W61TiwEdpxK1nDYk9QZANQ4jVg2D5o=,tag:wTvpgw9nQFb0bblR0QivqA==,type:str]
        key: ENC[AES256_GCM,data:ltLQxs/+iqgXmY8ZR7UtcDfFFeDI+wHh+B9aM5nDeoLs2TRz38677GdD9TRg0BY7bNDIvQ3aPXgDS6fMJ28PBIXJbBa/UhLSa/rABDC6l7wUja6DroxLxdc5Rwflu0/3Fx7hGqbq8lRog+tSyTebUbnb1hd5jfmMjzcuJTaFbkC5dooCKB1SZcYihP/NwrH2LrPN/RfuK7QPzy3akEKMg5MLBupqLKsRIEY5gZFLbK6zANQt45AWRn/34fTiFIbSICvlH18vlUGuGwwc5jWF7drbpFOFoVu0NgBwVWum+mEgayI5BQRFAz1sejxLeyTC4YTrizzcS6a6twgjkECmWfQc25KW3gnVDp6Lf3mA5av31OqXuAekAkCWJGWhnqNs2A9Y5OCb1A+rxHzZrzrF/BU/nhWpkcuvdWvcjmyaONi3pXr46ShC1uKXkpK7QtXph5a+rocZICwh24jI2zx [...]
        termination: ENC[AES256_GCM,data:jMog2w==,iv:2qhYUPIxL7oTd3snA+mMxHEOlzE5efocy8NrkTMF0Wo=,tag:IvQEcbqd3AlA9l5szP6vEw==,type:str]
    to:
        kind: Service
        name: jupyterhub
        weight: 100
    wildcardPolicy: None
status:
    ingress: null
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    lastmodified: '2022-04-04T13:29:57Z'
    mac: ENC[AES256_GCM,data:ShTZpKraFMl0H4TxKIunJ5pO5BC3xXGB9YaiwPMpLIQBE9cwxncUjbTYXqXpInSJh1wC+vEv4OYyWF2ZfPftcnhnx9WPUgpgvlVTWVdjmQM12B/q5SBkdT7V+V86kVfDTTT0YXvDqAQ+KUEe94HvpUC0JW+Wr0ca2HBY7h+Spr4=,iv:W2tUnHeKpvM9xXM2TTIUUbLqgob/yHegR/ArtP21MDY=,tag:8HjFW/aMpOeYxeOpV43EwQ==,type:str]
    pgp:
    -   created_at: '2021-04-09T12:44:35Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQf9HX3TzPRlddRqslJfeamFglJsVMwROS54k0uWDssWbmRQ
[...]
            XbI4K6887CeMlMhKVI3n0w8fAZXQKNSEF6kufzs=
            =3ZZo
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.6.1
